compiler/tools/fpp-check/test/state_machine/undef/nested_guard_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/undef/nested_guard_error.fpp:5.19
    choice C { if g enter S else enter S }
                  ^
error: undefined symbol g
